// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Create Job 1`] = `
{
  "link": null,
  "name": "JOB_1",
  "referenceID": "4711",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API Create Job 2`] = `
{
  "link": null,
  "name": "JOB_1",
  "referenceID": "4711",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API Create Job 3`] = `
[
  {
    "name": "A",
    "value": "abcd",
  },
  {
    "name": "C",
    "value": "true",
  },
  {
    "name": "D",
    "value": "32",
  },
  {
    "name": "E",
    "value": "2025-01-01T00:00:00Z",
  },
]
`;

exports[`API GET Job 1`] = `
[
  {
    "link": "https://sap.com",
    "name": "JOB_1",
    "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-01T12:00:00Z",
    "status": "requested",
    "version": "1",
  },
  {
    "link": "https://sap.com",
    "name": "JOB_2",
    "referenceID": "8158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-02T12:00:00Z",
    "status": "running",
    "version": "1",
  },
  {
    "link": "https://sap.com",
    "name": "JOB_3",
    "referenceID": "9158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-02T12:00:00Z",
    "status": "completedWithError",
    "version": "1",
  },
]
`;

exports[`API GET Job 2`] = `
{
  "link": "https://sap.com",
  "name": "JOB_1",
  "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API GET Job Definitions 1`] = `
[
  {
    "description": "Job Definition 1",
    "name": "JOB_1",
    "version": "1",
  },
  {
    "description": "Job Definition 2",
    "name": "JOB_2",
    "version": "1",
  },
  {
    "description": "Job Definition 3",
    "name": "JOB_3",
    "version": "1",
  },
]
`;

exports[`API GET Job Definitions 2`] = `
{
  "description": "Job Definition 1",
  "name": "JOB_1",
  "version": "1",
}
`;

exports[`API GET Job Parameter Definitions 1`] = `
[
  {
    "dataType": "string",
    "description": "Parameter A",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "A",
    "required": true,
    "type": "writableValue",
    "value": "ABC",
  },
  {
    "dataType": "number",
    "description": "Parameter B",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "B",
    "required": false,
    "type": "readOnlyValue",
    "value": "21",
  },
  {
    "dataType": "boolean",
    "description": "Parameter C",
    "jobName": "JOB_1",
    "mappingType": "testRun",
    "name": "C",
    "required": true,
    "type": "mapping",
    "value": "0",
  },
  {
    "dataType": "number",
    "description": "Parameter D",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "D",
    "required": false,
    "type": "writableValue",
    "value": "22",
  },
  {
    "dataType": "datetime",
    "description": "Parameter E",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "E",
    "required": false,
    "type": "writableValue",
    "value": "2025-01-01T00:00:00Z",
  },
]
`;

exports[`API GET Job Parameters 1`] = `
[
  {
    "name": "A",
    "value": "ABC",
  },
  {
    "name": "B",
    "value": "11",
  },
  {
    "name": "C",
    "value": "true",
  },
  {
    "name": "D",
    "value": "12",
  },
  {
    "name": "E",
    "value": "2025-01-02T00:00:00Z",
  },
]
`;

exports[`API GET Job Result Messages 1`] = `
[
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "error",
    "text": "This is an error",
  },
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "warning",
    "text": "This is a warning",
  },
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "info",
    "text": "This is an information",
  },
]
`;

exports[`API GET Job Results 1`] = `
[
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type": "link",
  },
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "plain/text",
    "name": "Data",
    "type": "data",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type": "message",
  },
]
`;

exports[`API Open API GET API Docs Root 1`] = `
"
<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  
  <title>Swagger UI</title>
  <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
  <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" /><link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
  <style>
    html
    {
      box-sizing: border-box;
      overflow: -moz-scrollbars-vertical;
      overflow-y: scroll;
    }
    *,
    *:before,
    *:after
    {
      box-sizing: inherit;
    }

    body {
      margin:0;
      background: #fafafa;
    }
  </style>
</head>

<body>

<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
  <defs>
    <symbol viewBox="0 0 20 20" id="unlocked">
      <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"></path>
    </symbol>

    <symbol viewBox="0 0 20 20" id="locked">
      <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="close">
      <path d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="large-arrow">
      <path d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="large-arrow-down">
      <path d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"/>
    </symbol>


    <symbol viewBox="0 0 24 24" id="jump-to">
      <path d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"/>
    </symbol>

    <symbol viewBox="0 0 24 24" id="expand">
      <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"/>
    </symbol>

  </defs>
</svg>

<div id="swagger-ui"></div>

<script src="./swagger-ui-bundle.js"> </script>
<script src="./swagger-ui-standalone-preset.js"> </script>
<script src="./swagger-ui-init.js"> </script>



<style>
  .swagger-ui .topbar .download-url-wrapper { display: none } undefined
</style>
</body>

</html>
"
`;

exports[`API Open API GET API Docs Root 2`] = `
"
<!-- HTML for static distribution bundle build -->
<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  
  <title>Swagger UI</title>
  <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
  <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" /><link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
  <style>
    html
    {
      box-sizing: border-box;
      overflow: -moz-scrollbars-vertical;
      overflow-y: scroll;
    }
    *,
    *:before,
    *:after
    {
      box-sizing: inherit;
    }

    body {
      margin:0;
      background: #fafafa;
    }
  </style>
</head>

<body>

<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
  <defs>
    <symbol viewBox="0 0 20 20" id="unlocked">
      <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V6h2v-.801C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8z"></path>
    </symbol>

    <symbol viewBox="0 0 20 20" id="locked">
      <path d="M15.8 8H14V5.6C14 2.703 12.665 1 10 1 7.334 1 6 2.703 6 5.6V8H4c-.553 0-1 .646-1 1.199V17c0 .549.428 1.139.951 1.307l1.197.387C5.672 18.861 6.55 19 7.1 19h5.8c.549 0 1.428-.139 1.951-.307l1.196-.387c.524-.167.953-.757.953-1.306V9.199C17 8.646 16.352 8 15.8 8zM12 8H8V5.199C8 3.754 8.797 3 10 3c1.203 0 2 .754 2 2.199V8z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="close">
      <path d="M14.348 14.849c-.469.469-1.229.469-1.697 0L10 11.819l-2.651 3.029c-.469.469-1.229.469-1.697 0-.469-.469-.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-.469-.469-.469-1.228 0-1.697.469-.469 1.228-.469 1.697 0L10 8.183l2.651-3.031c.469-.469 1.228-.469 1.697 0 .469.469.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c.469.469.469 1.229 0 1.698z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="large-arrow">
      <path d="M13.25 10L6.109 2.58c-.268-.27-.268-.707 0-.979.268-.27.701-.27.969 0l7.83 7.908c.268.271.268.709 0 .979l-7.83 7.908c-.268.271-.701.27-.969 0-.268-.269-.268-.707 0-.979L13.25 10z"/>
    </symbol>

    <symbol viewBox="0 0 20 20" id="large-arrow-down">
      <path d="M17.418 6.109c.272-.268.709-.268.979 0s.271.701 0 .969l-7.908 7.83c-.27.268-.707.268-.979 0l-7.908-7.83c-.27-.268-.27-.701 0-.969.271-.268.709-.268.979 0L10 13.25l7.418-7.141z"/>
    </symbol>


    <symbol viewBox="0 0 24 24" id="jump-to">
      <path d="M19 7v4H5.83l3.58-3.59L8 6l-6 6 6 6 1.41-1.41L5.83 13H21V7z"/>
    </symbol>

    <symbol viewBox="0 0 24 24" id="expand">
      <path d="M10 18h4v-2h-4v2zM3 6v2h18V6H3zm3 7h12v-2H6v2z"/>
    </symbol>

  </defs>
</svg>

<div id="swagger-ui"></div>

<script src="./swagger-ui-bundle.js"> </script>
<script src="./swagger-ui-standalone-preset.js"> </script>
<script src="./swagger-ui-init.js"> </script>



<style>
  .swagger-ui .topbar .download-url-wrapper { display: none } undefined
</style>
</body>

</html>
"
`;

exports[`API Security GET CSP 1`] = `"default-src 'self' https://ui5.sap.com;base-uri 'self';font-src 'self' https: data:;form-action 'self';frame-ancestors 'self';img-src 'self' data: blob: https://ui5.sap.com;object-src 'none';script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ui5.sap.com;script-src-attr 'none';style-src 'self' https: 'unsafe-inline';upgrade-insecure-requests;connect-src wss: https://ui5.sap.com https://authentication.sap.hana.ondemand.com https://sap-afc-sdk.sap.com"`;
